# rlhf-canary

./: .gitignore  README.md  custom_thresholds.yaml  pyproject.toml  requirements.txt
canary/: __init__.py  cli.py  matrix.py
canary/collect/: __init__.py  env_fingerprint.py  metrics.py  profiler.py
canary/compare/: __init__.py  heuristics.py  stats.py  thresholds.py
canary/report/: __init__.py  github.py  markdown.py
canary/runner/: __init__.py  base.py  local.py
configs/: dpo_dataloader_bottleneck.yaml  dpo_memory_regression.yaml  dpo_nightly.yaml  dpo_perf.yaml  dpo_profiled.yaml  dpo_slow.yaml  dpo_slow_profiled.yaml  dpo_smoke.yaml  dpo_unstable_lr.yaml  ppo_nightly.yaml  ppo_perf.yaml  ppo_run2.yaml  ppo_smoke.yaml  ppo_unstable.yaml  ppo_unstable_kl.yaml  sft_profiled.yaml  sft_run2.yaml  sft_smoke.yaml  sft_unstable.yaml
notebooks/: 01_quickstart.ipynb  02_profiler_deep_dive.ipynb  03_stability_monitoring.ipynb  04_root_cause_analysis.ipynb  05_ppo_canary.ipynb  06_sft_canary.ipynb  07_ci_cd_integration.ipynb  08_configuration_and_thresholds.ipynb  09_quantization_and_memory.ipynb  quickstart.ipynb  vscode_dev.ipynb
scripts/: test_notebooks.py
tests/: __init__.py  test_cli.py  test_compare.py  test_heuristics.py  test_metrics.py  test_profiler.py  test_report.py  test_runner.py
workflows/: nightly_canary.yml  pr_canary.yml
