[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlhf-canary"
version = "0.1.0"
description = "RLHF Canary: Regression detection for RLHF/finetuning pipelines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Matt McManus"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["rlhf", "machine-learning", "training", "regression-testing", "canary"]

dependencies = [
    "transformers==4.44.2",
    "datasets>=2.14.0",
    "trl==0.11.4",        # STRICT PIN: Do not change to >=0.12.0
    "peft==0.12.0",
    "accelerate==0.34.2",
    "tokenizers==0.19.1",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
quantization = [
    "bitsandbytes>=0.41.0",
]

[project.scripts]
canary = "canary.cli:main"

[project.urls]
Homepage = "https://github.com/mmcmanus1/rlhf-canary"
Repository = "https://github.com/mmcmanus1/rlhf-canary"

[tool.setuptools.packages.find]
include = ["canary*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
